# FSmcedit

./: .gitignore  .gitmodules  CMakeLists.txt  Cursor.cpp  Cursor.h  Main.cpp  Parser.cpp  Parser.h  README.md  build.bat  world_data  world_data.txt
oppoworlds/PomeFdb9nPw=/db/: 002464.ldb  002465.ldb  002466.ldb  002469.ldb  002470.ldb  MANIFEST-002477
oppoworlds/X99MwJ4c8Fs=/: level.dat_old
oppoworlds/X99MwJ4c8Fs=/db/: 000019.ldb  MANIFEST-000016
src/: Cursor.cpp  Cursor.h  Main.cpp  Parser.cpp  Parser.h
tmp/testdb/: 002462.ldb  002463.ldb  002480.ldb  LOG  LOG.old  MANIFEST-002484  MANIFEST-002492  MANIFEST-002498  MANIFEST-002504  MANIFEST-002510  MANIFEST-002512  MANIFEST-002528
tmp/testworld/: level.dat_old  levelname.txt  world_resource_packs.json
tmp/testworld/db/: 002467.ldb  002468.ldb  002471.ldb  002475.ldb  LOG  LOG.old  MANIFEST-002524  MANIFEST-002542  MANIFEST-002566  MANIFEST-002620  MANIFEST-002622
